--- a/core/templates/activation/html_body.html
+++ b/core/templates/activation/html_body.html
@@ -10,9 +10,9 @@
 
 <p>For additional reference, please watch the video tutorial by clicking on the link below:</p>
 
-<a href="https://www.youtube.com/watch?v=eywl1HS9NzA">VIDEO TUTORIAL</a>
+<a href="{{ OVERVIEW_VIDEO }}">VIDEO TUTORIAL</a>
 
-<p>Feel free to reach out to us at +91 7057216343 or contact@hwcentral.in for any enquiries/feedback!</p>
+<p>Feel free to reach out to us at +91 {{ CONTACT_PHONE }} or {{ CONTACT_EMAIL }} for any enquiries/feedback!</p>
 
 <div>Regards</div>
 <div>The {{ site_name }} Team</div>
