--- a/core/templates/activation/text_body.html
+++ b/core/templates/activation/text_body.html
@@ -8,9 +8,9 @@ Please click on the link below to activate your account and set your password:
 
 For additional reference, please watch the video tutorial by clicking on the following link:
 
-https://www.youtube.com/watch?v=eywl1HS9NzA
+{{ OVERVIEW_VIDEO }}
 
-Feel free to reach out to us at +91 7057216343 or contact@hwcentral.in for any enquiries/feedback!
+Feel free to reach out to us at +91 {{ CONTACT_PHONE }} or {{ CONTACT_EMAIL }} for any enquiries/feedback!
 
 Regards
 The {{ site_name }} Team
