--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -8,8 +8,8 @@
 	</div>
 
     <ul class='navbar-right nav navbar-nav footer'>
-        <li><a title="Click here to email us!" href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in </a></li>
-        <li><a title="Click here to call us!" href="tel:+917057216343">Phone: +91 7057216343 </a></li>
+        <li><a title="Click here to email us!" href="mailto:{{ CONTACT_EMAIL }}">Email : {{ CONTACT_EMAIL }}</a></li>
+        <li><a title="Click here to call us!" href="tel:+91{{ CONTACT_PHONE }}">Phone: +91 {{ CONTACT_PHONE }}</a></li>
     </ul>
 
 </div> <!--- End Fluid-->
