--- a/core/static/css/login.css
+++ b/core/static/css/login.css
@@ -1,44 +1,43 @@
 #base_body{
-        background-image:url('images/apple_login.jpg');
-        background-size:cover;
-        padding: 30px;
-    }
+    background-image: url('../img/blackboard-light.jpg');
+    background-size: cover;
+}
 
-#forgotpass{
+#logindiv #forgotpass {
 	color:#FFF;
 }
 
 #logindiv form {
-    font-size: 1.25em;
+    font-size: 20px;
 }
 
-#logindiv form div.fieldWrapper {
+#logindiv form .fieldWrapper {
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-#id_username, #id_password {
-    margin: 0;
-    float: right;
+#logindiv form .fieldWrapper input {
     width:230px;
     color: black;
 }
 
-#loginbutton {
-    padding-left: 45px;
-    padding-right: 45px;
-    padding-top:10px;
-    padding-bottom: 10px;
+#logindiv form .fieldWrapper > label {
+    font-weight: 400;
+    width: 30%;
+}
+
+#logindiv form #loginbutton {
+    padding: 10px 45px;
     font-family: proxima-nova, Arial, sans-serif;
     font-size: 15px;
     margin-bottom: 15px;
-    margin-top: 20px;
+    margin-top: 30px;
     color: black;
     border: none;
     background-color: white;
 }
 
-#loginbutton:hover {
+#logindiv form #loginbutton:hover {
     color: darkgrey;
     cursor: hand;
     cursor: pointer;
@@ -46,36 +45,43 @@
 
 #logindiv {
     color: #fff;
-    opacity: 1.0;
-    margin-left: 20px;
-    margin-top: 20px;
-    padding: 30px;
-    padding-left:40px;
-    padding-top:20px;
+    padding: 20px;
     width: 420px;
     border: 3px #aaa solid;
+    margin: 50px auto;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.6);
 }
 
-#logindiv h2{
+#logindiv #heading {
     margin-bottom: 30px;
-    font-size:36px;
+    font-size: 40px;
 }
 
-@media screen and (max-width: 600px){
-
-    #logindiv {;
-    margin-left: 0px;
-    margin-top: 0px;
-    padding:10px;
-    width: 100%;
-    border: none;
+#logindiv #heading h2 {
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
-    #logindiv form div.fieldWrapper{
-        width:300px;
+#logindiv #heading h2:first-child {
+    font-size: 50px;
+}
+
+#logindiv #heading h2:first-child .glyphicon {
+    left: -2px;
+}
+
+@media screen and (max-width: 600px) {
+
+    #logindiv {
+        padding: 10px 30px;
+        border: none;
+        margin: 20px auto;
+        text-align: left;
+        background: none;
     }
 
-    #logindiv form div.fieldWrapper input{
+    #logindiv form .fieldWrapper input {
         width:180px;
     }
 }
