--- a/lodge/static/css/lodge/index.css
+++ b/lodge/static/css/lodge/index.css
@@ -1,3 +1,12 @@
 #lodge-vid-container {
-    padding: 50px;
+    padding: 40px;
+    max-width: 992px;
+    margin: 0px auto;
 }
+
+@media screen and (max-width: 600px) {
+    #lodge-vid-container {
+        padding: 10px;
+    }
+}
+
