--- a/sphinx/templates/sphinx/modules/var_constraints.html
+++ b/sphinx/templates/sphinx/modules/var_constraints.html
@@ -4,7 +4,7 @@
         <input type="text" id="var_name">
     </div>
     <select id="select_num" onChange="loadVarType(this.value, this.id);">
-        <option value="0">Select Type</option>
+        <option value="0">Default (2-20)</option>
         <option value="1">Options</option>
         <option value="2">Range</option>
         <option value="3">Fraction</option>
