--- a/lodge/templates/lodge/index.html
+++ b/lodge/templates/lodge/index.html
@@ -2,6 +2,10 @@
 
 {% load staticfiles %}
 
+{% block title %}
+    Videos
+{% endblock title %}
+
 {% block base_css %}
     <link rel="stylesheet" href="{% static "css/lodge/index.css" %}" type="text/css"/>
 {% endblock base_css %}
