--- a/core/templates/authenticated/practice.html
+++ b/core/templates/authenticated/practice.html
@@ -1,7 +1,7 @@
 {% extends "authenticated/base.html" %}
 
 {% load staticfiles %}
-{% block title %} Create Practice {% endblock title %}
+{% block title %} Create Practice Assignment {% endblock title %}
 {% block authenticated_base_js %}
     <script type="text/javascript" src="{% static "js/ajax/question_set_choice_widget.js" %}"></script>
 {% endblock authenticated_base_js %}
