--- a/ink/templates/ink/base.html
+++ b/ink/templates/ink/base.html
@@ -3,5 +3,5 @@
 {# wrapper on authenticated-base for soe ink-specific customization #}
 
 {% block title %}
-    Ink
+    Registration
 {% endblock title %}
