--- a/core/templates/authenticated/submission_id/base.html
+++ b/core/templates/authenticated/submission_id/base.html
@@ -22,7 +22,6 @@
 {% block authenticated_body %}
     {% block assignment_header %}
 
-        <a id="page-top"></a>
         <h5 class="header5 topheader row well submission_header ">
             {% block corrected_submission_student %}{% endblock corrected_submission_student %}
             <span id="submission_title">{{ vm.authenticated_body.aql_info.title }}</span>
@@ -65,6 +64,6 @@
             </form>
         {% endwith %}
         <a id="charm-gotop" class="charm charm-bottom charm-button smooth-scroll-link" title="Go To Top"
-           href="#page-top"><span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span></a>
+           href="body"><span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span></a>
     </div>
 {% endblock authenticated_body %}
