irght side spacing bugfix

--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -92,27 +92,31 @@
         <img class="img-responsive" src="{% static 'img/index/teacher.jpg' %}">
     </div>
 
-    <div id="horizontaldiv3" class="horizontaldiv row">
-        <div class="col-lg-6" id="drivencolumn">
-        </div>
-        <div class="col-lg-6" id="drivercolumn">
-            <div id="quick_intro">
-                Homework Central is an adaptive online learning platform that improves
-                concept retention and learning outcomes for students.
+    <div id="horizontaldiv3" class="horizontaldiv container-fluid">
+        <div class="row">
+            <div class="col-lg-6" id="drivencolumn">
             </div>
-            <div id="feature_list">
-                <ul>
-                    <li>Automated correction means no more repetitive, time consuming correction for teachers.</li>
-                    <li>Advanced analytics identify student strengths and weaknesses and provide detailed insights.</li>
-                    <li>High quality personalized questions target specific learning outcomes.</li>
-                    <li>Statistical tools track class performance and identify areas of improvement.</li>
-                    <li>Plagiarism detection and formulaic questions prevent student copying and allow for unlimited
-                        practice.
-                    </li>
-                    <li>Auto-generated report cards and a dedicated parent interface facilitate parent-school
-                        interaction.
-                    </li>
-                </ul>
+            <div class="col-lg-6" id="drivercolumn">
+                <div id="quick_intro">
+                    Homework Central is an adaptive online learning platform that improves
+                    concept retention and learning outcomes for students.
+                </div>
+                <div id="feature_list">
+                    <ul>
+                        <li>Automated correction means no more repetitive, time consuming correction for teachers.</li>
+                        <li>Advanced analytics identify student strengths and weaknesses and provide detailed
+                            insights.
+                        </li>
+                        <li>High quality personalized questions target specific learning outcomes.</li>
+                        <li>Statistical tools track class performance and identify areas of improvement.</li>
+                        <li>Plagiarism detection and formulaic questions prevent student copying and allow for unlimited
+                            practice.
+                        </li>
+                        <li>Auto-generated report cards and a dedicated parent interface facilitate parent-school
+                            interaction.
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
